cloud-infra-macros/tests/fails/env_var_key_too_short.rs
use cloud_infra_macros::env_var_key;

fn example() {
    let key = env_var_key!("A");
}

fn main() {}