cloud-infra-macros/tests/fails/env_var_key_too_short.stderr
error: proc macro panicked
 --> tests/fails/env_var_key_too_short.rs:4:15
  |
4 |     let key = env_var_key!("A");
  |               ^^^^^^^^^^^^^^^^^
  |
  = help: message: env var key should be at least two characters long
